FR alias hint translation

--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -20567,7 +20567,7 @@
       </notes>
       <segment>
         <source>Diese Stadt erlaubt es, einen Spitznamen zu tragen.</source>
-        <target>Diese Stadt erlaubt es, einen Spitznamen zu tragen.</target>
+        <target>Cette ville autorise les alias.</target>
       </segment>
     </unit>
     <unit id="qYsZ1.g" name="Freilassen, um normalen Spielernamen zu verwenden.">
