FR Translation in global

--- a/translations/global+intl-icu.fr.xlf
+++ b/translations/global+intl-icu.fr.xlf
@@ -4217,7 +4217,7 @@
       </notes>
       <segment>
         <source>Hinweis</source>
-        <target>Hinweis</target>
+        <target>Note</target>
       </segment>
     </unit>
   </file>
