Changed APAG hero power FR name

--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -22259,7 +22259,7 @@ cette violente opération...]]></target>
       </notes>
       <segment>
         <source>Profi-Fotograph</source>
-        <target>Photographe professionnel</target>
+        <target>Photographe de guerre</target>
       </segment>
     </unit>
     <unit id="Uy1Rmg9" name="Du beginst jede neue Stadt mit einer Kamera aus Vorkriegstagen.">
