--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -4410,7 +4410,7 @@
     <unit id="T6FFmLN" name="Wahrer Freund">
       <notes>
         <note category="german">Wahrer Freund</note>
-        <note category="from">twig:///templates/ajax/soul/refer.html.twig</note>
+        <note category="from">twig:///templates/ajax/admin/users/social.html.twig;twig:///templates/ajax/soul/refer.html.twig</note>
       </notes>
       <segment>
         <source>Wahrer Freund</source>
