--- a/translations/admin+intl-icu.en.xlf
+++ b/translations/admin+intl-icu.en.xlf
@@ -4422,7 +4422,7 @@
       </notes>
       <segment>
         <source>Eternal-Twin-Konto verlinkt</source>
-        <target>Linked Eternal-Twin account</target>
+        <target>Linked EternalTwin account</target>
       </segment>
     </unit>
     <unit id="_VFidG8" name="Gruppentyp">
