--- a/translations/admin+intl-icu.es.xlf
+++ b/translations/admin+intl-icu.es.xlf
@@ -4370,7 +4370,7 @@
       </notes>
       <segment>
         <source>Eternal-Twin-Konto verlinkt</source>
-        <target>Cuenta de Eternaltwin vinculada</target>
+        <target>Cuenta de EternalTwin vinculada</target>
       </segment>
     </unit>
     <unit id="_VFidG8" name="Gruppentyp">
