--- a/translations/soul+intl-icu.en.xlf
+++ b/translations/soul+intl-icu.en.xlf
@@ -4352,7 +4352,7 @@
       </notes>
       <segment>
         <source>Profil Eternal-Twin</source>
-        <target>Eternal-Twin Profile</target>
+        <target>EternalTwin Profile</target>
       </segment>
     </unit>
     <unit id="abqsDy0" name="Schreiben">
