--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -4314,7 +4314,7 @@
       </notes>
       <segment>
         <source>Profil Eternal-Twin</source>
-        <target>Perfil Eternal-Twin</target>
+        <target>Perfil EternalTwin</target>
       </segment>
     </unit>
     <unit id="abqsDy0" name="Schreiben">
