--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -4342,7 +4342,7 @@
       </notes>
       <segment>
         <source>Profil Eternal-Twin</source>
-        <target>Profil Eternal-Twin</target>
+        <target>Profil EternalTwin</target>
       </segment>
     </unit>
     <unit id="abqsDy0" name="Schreiben">
