--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -4336,9 +4336,8 @@
     </unit>
     <unit id="Wodhw7O" name="Profil Eternal-Twin">
       <notes>
-        <note category="german">Profil Eternal-Twin</note>
+        <note category="german">Profil EternalTwin</note>
         <note category="from">twig:///templates/ajax/soul/user_tooltip.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Profil Eternal-Twin</source>
@@ -4523,6 +4522,17 @@
       <segment>
         <source>Blockierter Spieler</source>
         <target>Joueurs bloqués</target>
+      </segment>
+    </unit>
+    <unit id="gqnWr8F" name="Deine Blockierliste ist leer.">
+      <notes>
+        <note category="german">Deine Blockierliste ist leer.</note>
+        <note category="from">twig:///templates/ajax/soul/refer.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Deine Blockierliste ist leer.</source>
+        <target>Votre liste noire est vide.</target>
       </segment>
     </unit>
   </file>
