--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -4309,7 +4309,7 @@
     </unit>
     <unit id="Wodhw7O" name="Profil Eternal-Twin">
       <notes>
-        <note category="german">Profil Eternal-Twin</note>
+        <note category="german">Profil EternalTwin</note>
         <note category="from">twig:///templates/ajax/soul/user_tooltip.html.twig</note>
       </notes>
       <segment>
@@ -4497,6 +4497,17 @@
       <segment>
         <source>Blockierter Spieler</source>
         <target>Blockierter Spieler</target>
+      </segment>
+    </unit>
+    <unit id="gqnWr8F" name="Deine Blockierliste ist leer.">
+      <notes>
+        <note category="german">Deine Blockierliste ist leer.</note>
+        <note category="from">twig:///templates/ajax/soul/refer.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Deine Blockierliste ist leer.</source>
+        <target>Tu lista negra está vacía.</target>
       </segment>
     </unit>
   </file>
